# HPM5361_SuperCap

./: .clangd  .cspell.json  .editorconfig  .gitignore  AGENTS.md  CMakeLists.txt  HPM5361_SuperCap.code-workspace  Makefile  README.md
App/: README.md  main.c
App/Algorithm/Inc/: algo_ffd.h  algo_filter.h  algo_hyst.h  algo_pid.h  algo_pll.h  algo_ramp.h  algo_rms.h
App/Algorithm/Src/: algo_ffd.c  algo_filter.c  algo_hyst.c  algo_pid.c  algo_pll.c  algo_ramp.c  algo_rms.c
App/Application/Inc/: app_comm.h  app_control.h  app_entry.h
App/Application/Src/: app_comm.c  app_control.c  app_entry.c
App/Control/Inc/: ctrl_buckboost.h  ctrl_fault.h
App/Control/Src/: ctrl_buckboost.c  ctrl_fault.c
App/Debug/Inc/: app_debug.h  app_debug_adc.h  app_debug_can.h  app_debug_hrpwm.h  app_debug_profiler.h  app_debug_rtt.h
App/Debug/Src/: app_debug.c  app_debug_adc.c  app_debug_can.c  app_debug_hrpwm.c  app_debug_profiler.c  app_debug_rtt.c  app_debug_trap.c
App/Platform/Inc/: WS2812_Conf.h  app_adc.h  app_analog_signal.h  app_buzzer.h  app_can.h  app_gpio.h  app_gptmr.h  app_hrpwm.h  app_ws2812.h
App/Platform/Src/: app_adc.c  app_analog_signal.c  app_buzzer.c  app_can.c  app_gpio.c  app_gptmr.c  app_hrpwm.c  app_ws2812.c
Board/HPM5361_SuperCap_board/: HPM5361_SuperCap_board.cfg  HPM5361_SuperCap_board.yaml  board.c  board.h  pinmux.c  pinmux.h
Driver/IrqProfiler/: irq_profiler.c  irq_profiler.h
Driver/WS2812/: WS2812.c  WS2812.h  WS2812_Type.h
Driver/hpm_impl/: drv_adc.c  drv_clock.c  drv_gpio.c  drv_gptmr.c  drv_hrpwm.c  drv_mcan.c  drv_synt.c  drv_trgm.c  drv_uart.c  drv_ws2812.c
Interface/: intf_adc.h  intf_attr.h  intf_can.h  intf_clock.h  intf_default.c  intf_gpio.h  intf_gptmr.h  intf_hrpwm.h  intf_synt.h  intf_trgm.h  intf_uart.h  intf_ws2812.h
doc/: adc_driver_design.md  build_flash_debug_guide.md  hpm_pwm_gptmr_pwm_guide.md  hrpwm_driver_design.md
